--- a/src/main/resources/webserver/template/movie/user/moviebox/movieboxform.html
+++ b/src/main/resources/webserver/template/movie/user/moviebox/movieboxform.html
@@ -52,6 +52,12 @@
                 </div>
             </div>
             <div class="equal width fields">
+                <div class="field">
+                    <label>Cover URL</label>
+                    <input name="coverUrl" type="url">
+                </div>
+            </div>
+            <div class="equal width fields">
                 <div class="field required">
                     <label>Produktionsjahr</label>
                     <select name="year" class="ui dropdown search" required>
