--- a/src/main/resources/webserver/template/movie/user/moviebox/boxmovieform.html
+++ b/src/main/resources/webserver/template/movie/user/moviebox/boxmovieform.html
@@ -76,7 +76,16 @@
                 <div class="field">
                     <label>Cover</label>
                     <input name="cover" type="file">
-                    <input name="coverPath" type="hidden">
+                </div>
+            </div>
+            <div class="equal width fields">
+                <div class="field">
+                    <label>Cover URL</label>
+                    <input name="coverUrl" type="url">
+                </div>
+                <div class="field">
+                    <label>TMDB Cover</label>
+                    <input name="coverPath" type="text" readonly>
                 </div>
             </div>
             <div class="equal width fields">
