--- a/src/main/resources/webserver/template/movie/user/movieseries/seriesmovieform.html
+++ b/src/main/resources/webserver/template/movie/user/movieseries/seriesmovieform.html
@@ -55,7 +55,7 @@
             <div class="equal width fields">
                 <div class="field required">
                     <label>Typ</label>
-                    <select name="type" class="ui dropdown search" required>
+                    <select name="type" class="ui dropdown" required>
                         <option value="">Typ</option>
                         <option value="Main">Hauptfilm</option>
                         <option value="Prequel">Vorgeschichte</option>
