--- a/src/main/resources/webserver/template/movie/user/moviebox/movieboxform.html
+++ b/src/main/resources/webserver/template/movie/user/moviebox/movieboxform.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="field required">
                     <label>Medium</label>
-                    <select name="disc" class="ui dropdown search" required>
+                    <select name="disc" class="ui dropdown" required>
                         <option value="">Medium</option>
                         {% for element in discList %}
                         <option value="{{ element.getId().get() }}">{{ element.getName() | escape }}</option>
