add movie search

--- a/src/main/resources/webserver/template/movie/user/headline.html
+++ b/src/main/resources/webserver/template/movie/user/headline.html
@@ -2,7 +2,7 @@
     function search() {
 
         var value = $('.ui.search input').val();
-        window.location = '/movie/search?title=' + value;
+        window.location = '/movie/search?query=' + value;
     }
 
     $(function() {
