--- a/src/main/resources/webserver/template/movie/user/movie/movielist.html
+++ b/src/main/resources/webserver/template/movie/user/movie/movielist.html
@@ -25,40 +25,35 @@
     <div class="ui link cards four column doubling stackable bottom attached">
         {% for element in moviesAtPage %}
         <div class="card" onclick="window.location = '{% if element.isInMovieBox() %}/movie/movieboxview?id={{ element.getBoxId().get().get() }}#{{ element.getId().get() }}{% else %}/movie/movieview?id={{ element.getId().get() }}{% endif %}'">
-            <div class="ui card">
-                <div class="image">
-                    {% if newestMovies.contains(element.getId().get()) %}
-                    <a class="ui left corner label blue">
-                        <i class="star yellow icon"></i>
-                    </a>
-                    {% endif %}
-                    {% if viewSoonMovies.contains(element.getId().get()) %}
-                    <a class="ui right corner label orange">
-                        <i class="binoculars icon"></i>
-                    </a>
-                    {% endif %}
-                    {% if element.getCoverFile() != null %}
-                    <img src="/movie/cover?file={{ element.getCoverFile() }}">
-                    {% else %}
-                    <img src="/static/img/noimage.gif">
-                    {% endif %}
-                </div>
-                <div class="content">
-                    <div class="ui">
-                        <div class="header">{{ element.getTitle() | escape }}</div>
-                        <div class="meta">
-                            {{ genreEditor.getById(element.getGenreId()).get().getName() | escape }}
-                        </div>
+            <div class="image">
+                {% if newestMovies.contains(element.getId().get()) %}
+                <a class="ui left corner label blue">
+                    <i class="star yellow icon"></i>
+                </a>
+                {% endif %}
+                {% if viewSoonMovies.contains(element.getId().get()) %}
+                <a class="ui right corner label orange">
+                    <i class="binoculars icon"></i>
+                </a>
+                {% endif %}
+                {% if element.getCoverFile() != null %}
+                <img src="/movie/cover?file={{ element.getCoverFile() }}">
+                {% else %}
+                <img src="/static/img/noimage.gif">
+                {% endif %}
+            </div>
+            <div class="content">
+                <div class="ui">
+                    <div class="header">{{ element.getTitle() | escape }}</div>
+                    <div class="meta">
+                        {{ element.getSubTitle() | escape }}
                     </div>
                 </div>
-                <div class="extra content">
+            </div>
+            <div class="extra content">
                     <span class="right floated">
                         {{ element.getDuration() | minuteformat }}
                     </span>
-                    <span>
-                        {{ discEditor.getById(element.getDiscId()).get().getName() | escape }}
-                    </span>
-                </div>
             </div>
         </div>
         {% endfor %}
