--- a/src/main/resources/webserver/template/movie/user/moviebox/movieboxlist.html
+++ b/src/main/resources/webserver/template/movie/user/moviebox/movieboxlist.html
@@ -25,30 +25,32 @@
     <div class="ui link cards four column doubling stackable bottom attached">
         {% for element in movieBoxessAtPage %}
         <div class="card" onclick="window.location = '/movie/movieboxview?id={{ element.getId().get() }}'">
-            <div class="ui card">
-                <div class="image">
-                    {% if boxesWithNewMovies.contains(element.getId().get()) %}
-                    <a class="ui left corner label blue">
-                        <i class="star yellow icon"></i>
-                    </a>
-                    {% endif %}
-                    {% if boxesWithViewSoonMovies.contains(element.getId().get()) %}
-                    <a class="ui right corner label orange">
-                        <i class="binoculars icon"></i>
-                    </a>
-                    {% endif %}
-                    {% if element.getCoverFile() != null %}
-                    <img src="/movie/cover?file={{ element.getCoverFile() }}">
-                    {% else %}
-                    <img src="/static/img/noimage.gif">
-                    {% endif %}
-                </div>
-                <div class="content">
-                    <div class="ui">
-                        <div class="header">{{ element.getTitle() | escape }}</div>
+            <div class="image">
+                {% if boxesWithNewMovies.contains(element.getId().get()) %}
+                <a class="ui left corner label blue">
+                    <i class="star yellow icon"></i>
+                </a>
+                {% endif %}
+                {% if boxesWithViewSoonMovies.contains(element.getId().get()) %}
+                <a class="ui right corner label orange">
+                    <i class="binoculars icon"></i>
+                </a>
+                {% endif %}
+                {% if element.getCoverFile() != null %}
+                <img src="/movie/cover?file={{ element.getCoverFile() }}">
+                {% else %}
+                <img src="/static/img/noimage.gif">
+                {% endif %}
+            </div>
+            <div class="content">
+                <div class="ui">
+                    <div class="header">{{ element.getTitle() | escape }}</div>
+                    <div class="meta">
+                        {{ element.getSubTitle() | escape }}
                     </div>
                 </div>
-                <div class="extra content">
+            </div>
+            <div class="extra content">
                     <span class="right floated">
                         {% if element.getBoxMovies().size() == 1 %}
                         1 Film
@@ -56,10 +58,6 @@
                         {{ element.getBoxMovies().size() | numberformat }} Filme
                         {% endif %}
                     </span>
-                    <span>
-                        {{ discEditor.getById(element.getDiscId()).get().getName() | escape }}
-                    </span>
-                </div>
             </div>
         </div>
         {% endfor %}
