--- a/src/main/resources/webserver/template/movie/user/movieseries/movieserieslist.html
+++ b/src/main/resources/webserver/template/movie/user/movieseries/movieserieslist.html
@@ -25,30 +25,32 @@
     <div class="ui link cards four column doubling stackable bottom attached">
         {% for element in movieSeriesAtPage %}
         <div class="card" onclick="window.location = '/movie/movieseriesview?id={{ element.getId().get() }}'">
-            <div class="ui card">
-                <div class="image">
-                    {% if seriesWithNewMovies.contains(element.getId().get()) %}
-                    <a class="ui left corner label blue">
-                        <i class="star yellow icon"></i>
-                    </a>
-                    {% endif %}
-                    {% if seriesWithViewSoonMovies.contains(element.getId().get()) %}
-                    <a class="ui right corner label orange">
-                        <i class="binoculars icon"></i>
-                    </a>
-                    {% endif %}
-                    {% if element.getPosterFile().length() > 0 %}
-                    <img src="/movie/cover?file={{ element.getPosterFile() }}">
-                    {% else %}
-                    <img src="/static/img/noimage.gif">
-                    {% endif %}
-                </div>
-                <div class="content">
-                    <div class="ui">
-                        <div class="header">{{ element.getTitle() | escape }}</div>
+            <div class="image">
+                {% if seriesWithNewMovies.contains(element.getId().get()) %}
+                <a class="ui left corner label blue">
+                    <i class="star yellow icon"></i>
+                </a>
+                {% endif %}
+                {% if seriesWithViewSoonMovies.contains(element.getId().get()) %}
+                <a class="ui right corner label orange">
+                    <i class="binoculars icon"></i>
+                </a>
+                {% endif %}
+                {% if element.getPosterFile().length() > 0 %}
+                <img src="/movie/cover?file={{ element.getPosterFile() }}">
+                {% else %}
+                <img src="/static/img/noimage.gif">
+                {% endif %}
+            </div>
+            <div class="content">
+                <div class="ui">
+                    <div class="header">{{ element.getTitle() | escape }}</div>
+                    <div class="meta">
+                        {{ element.getSubTitle() | escape }}
                     </div>
                 </div>
-                <div class="extra content">
+            </div>
+            <div class="extra content">
                     <span class="right floated">
                         {% if element.getSeriesMovies().size() == 1 %}
                         1 Film
@@ -56,7 +58,6 @@
                         {{ element.getSeriesMovies().size() | numberformat }} Filme
                         {% endif %}
                     </span>
-                </div>
             </div>
         </div>
         {% endfor %}
