add simple statistics

--- a/src/main/resources/webserver/template/movie/admin/headline.html
+++ b/src/main/resources/webserver/template/movie/admin/headline.html
@@ -36,6 +36,10 @@
             <img src="/static/img/icon/genre.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Genre
         </a>
+        <a href="/movie/admin/statistic" class="item {% if module == 'statistic' %}active{% endif %}">
+            <img src="/static/img/icon/statistic.png" width="64" height="64" class="logo" style="margin: 0 auto;">
+            Statistik
+        </a>
         <a href="/movie/admin/settings" class="item {% if module == 'settings' %}active{% endif %}">
             <img src="/static/img/icon/settings.png" width="64" height="64" class="logo" style="margin: 0 auto;">
             Einstellungen
