--- a/src/main/resources/webserver/template/movie/admin/index.html
+++ b/src/main/resources/webserver/template/movie/admin/index.html
@@ -50,6 +50,14 @@
                     <div class="header">Genre</div>
                 </div>
             </div>
+            <div class="card" onclick="window.location = '/movie/admin/statistic'">
+                <div class="image">
+                    <img src="/static/img/icon/statistic.png">
+                </div>
+                <div class="content">
+                    <div class="header">Statistik</div>
+                </div>
+            </div>
             <div class="card" onclick="window.location = '/movie/admin/settings'">
                 <div class="image">
                     <img src="/static/img/icon/settings.png">
